--- a/lang/pt.json
+++ b/lang/pt.json
@@ -114,7 +114,7 @@
     "cat.ssl.r": "Resultados",
     "cat.ssl.results.champion": "Campeões!",
     
-    "cat.ssl.robocup22": "1° Div B<br>1° Ball placement technical challenge<br>2° Vision Blackout<br>3° Dribbling challenge",
+    "cat.ssl.robocup22": "1° Div B<br>1° Desafio Técnico Ball Placement <br>2° Vision Blackout<br>3° Desafio de Dribbling ",
     "cat.ssl.robocup21": "3° Div A/B<br>1° Desafio técnico<br> 5° Desafio de Hardware",
     "cat.ssl.robocup20": "Adiado",
     "cat.ssl.robocup19": "3°/4° Div B", 
