udpate(categories, data): update competition results

--- a/lang/en.json
+++ b/lang/en.json
@@ -64,15 +64,18 @@
     "cat.2d.desc": "In the 2D Simulation League, two teams of eleven autonomous software programs (called agents) each play soccer in a two-dimensional virtual soccer stadium represented by a central server, called SoccerServer. This server knows everything about the game, i.e. the current position of all players and the ball, the physics and so on. The game further relies on the communication between the server and each agent. On the one hand each player receives relative and noisy input of his virtual sensors (visual, acoustic and physical) and may on the other hand perform some basic commands (like dashing, turning or kicking) in order to influence its environment.",
     "cat.2d.r": "Results",
     
+    "cat.2d.robocup23": "6th",
     "cat.2d.robocup22": "10th",
     "cat.2d.robocup21": "7th",
     "cat.2d.robocup20": "Postponed",
     "cat.2d.robocup19": "9th",
     "cat.2d.robocup18": "N/A",
     
+    "cat.2d.larc23" : "N/A",
+    "cat.2d.larc22" : "1st",
     "cat.2d.larc21" : "1st" ,
     "cat.2d.larc20": "3rd",
-    "cat.2d.larc19": "2th",
+    "cat.2d.larc19": "2nd",
     "cat.2d.larc18": "4th",
     
     "cat.2d.iron21": "3rd",
@@ -92,17 +95,23 @@
     "cat.vss.desc2" : "In this approach we train the agents using reinforcement learning, that is we give a reward to actions good and bad for the agent, he learn maximize the reward and with this the best actions for every situation.",
     "cat.vss.r": "Results",
 
+    "cat.vss.larc23": "N/A",
+    "cat.vss.larc22": "1st",
     "cat.vss.larc21": "1st 3v3 RL<br>2nd 5v5 DET",
     "cat.vss.larc20": "4th DET <br> 5th RL",
     "cat.vss.larc19": "4th DET <br> 5th RL",
-    "cat.vss.larc18": "3th",
+    "cat.vss.larc18": "3rd",
     "cat.vss.larc17": "5th",
     "cat.vss.larc16": "16th",
     
+    "cat.vss.iron23": "2nd",
+    "cat.vss.iron22": "3rd",
     "cat.vss.iron21": "1st",
-    "cat.vss.iron20": "3th RL <br> 5th DET",
-    "cat.vss.iron19": "3th",
-    "cat.vss.iron18": "3th",
+    "cat.vss.iron20": "3rd RL <br> 5th DET",
+    "cat.vss.iron19": "3rd",
+    "cat.vss.iron18": "3rd",
+    "cat.vss.iron17": "N/A",
+    "cat.vss.iron16": "N/A",
 
     "cat.ssl" : "Small Size League",
     "cat.ssl.img1" : "Captured photo in RoboCup 2019.", 
@@ -111,12 +120,15 @@
     "cat.ssl.results.champion": "Champions!",
     "cat.ssl.r": "Results",
 
+    "cat.ssl.robocup23": "1st",
     "cat.ssl.robocup22": "1st Div B<br>1st Ball Placement Technical Challenge<br>2nd Vision Blackout<br>3rd Dribbling Challenge",
     "cat.ssl.robocup21": "3rd Div A/B<br>1st Ball Placement Technical Challenge<br>5th Hardware Challenge",
     "cat.ssl.robocup20": "Postponed",
     "cat.ssl.robocup19": "3rd/4th Div B", 
     "cat.ssl.robocup18": "N/A",
 
+    "cat.ssl.larc23": "N/A",
+    "cat.ssl.larc22": "1st",
     "cat.ssl.larc21": "1st",
     "cat.ssl.larc20": "1st",
     "cat.ssl.larc19": "5th",
