update(results, 2d): add IRONCup 2022 and 2023 results

--- a/lang/en.json
+++ b/lang/en.json
@@ -78,6 +78,8 @@
     "cat.2d.larc19": "2nd",
     "cat.2d.larc18": "4th",
     
+    "cat.2d.iron23": "2rd",
+    "cat.2d.iron22": "3rd",
     "cat.2d.iron21": "3rd",
     "cat.2d.iron20": "6th",
     "cat.2d.iron19": "N/A",
