--- a/lang/pt.json
+++ b/lang/pt.json
@@ -81,6 +81,8 @@
     "cat.2d.larc19": "2°",
     "cat.2d.larc18": "4°",
     
+    "cat.2d.iron23": "2°",
+    "cat.2d.iron22": "3°",
     "cat.2d.iron21": "3°",
     "cat.2d.iron20" : "6°",
     "cat.2d.iron19": "N/A",
