update(members page): replace members for '404' error

--- a/lang/en.json
+++ b/lang/en.json
@@ -173,5 +173,9 @@
 
     "talk": "Talk to us!",
 
-    "cat.Professor/Pesquisador": "Professor"
+    "cat.Professor/Pesquisador": "Professor",
+
+    "404.title": "Oops! Page Not Found.",
+    "404.description": "The page you're looking for doesn't exist.",
+    "404.button_label": "Back to Home"
 }
